components/product_page/top_section/product_images_carousel/product_images_carousel_styles.module.scss
.carousel_container {
    position: relative;
    width: 100%;
    padding-bottom: 64px;

    .slide_container {
        padding: 32px;
        
        img {
            width: 100%;
            height: 100%;
            object-fit: contain;
        }
    }

    .dot_controls {
        position: absolute;
        bottom: 32px;
        left: 50%;
        transform: translate(-50%, 0px);
    }
}

